--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script type="text/javascript" src="index.js"></script>
@@ -33,24 +33,24 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">ホーム<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">ホーム<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         担当講義資料
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">C言語</a>
-                        <a class="dropdown-item" href="#">WebプログラミングPJ</a>
-                        <a class="dropdown-item" href="#">情報セキュリティ</a>
-                        <a class="dropdown-item" href="#">情報処理概論</a>
+                        <a class="dropdown-item ajax" href="#">C言語</a>
+                        <a class="dropdown-item ajax" href="#">WebプログラミングPJ</a>
+                        <a class="dropdown-item ajax" href="#">情報セキュリティ</a>
+                        <a class="dropdown-item ajax" href="#">情報処理概論</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">卒業研究</a>
+                    <a class="nav-link ajax" id="grres">卒業研究</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">オープンキャンパス</a>
+                    <a class="nav-link ajax" id="oc">オープンキャンパス</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -59,7 +59,7 @@
             </form>
         </div>
     </nav>
-    <div id="containts">
+    <div id="contents">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-9 text-center home">
@@ -156,16 +156,16 @@
             <!-- ナビゲーション -->
             <ul class="nav justify-content-center mb-3">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">ホーム</a>
+                    <a class="nav-link" href="index.html">ホーム</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">担当講義資料</a>
+                    <a class="nav-link ajax" href="#">担当講義資料</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">卒業研究</a>
+                    <a class="nav-link ajax" id="grres" href="#">卒業研究</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">オープンキャンパス</a>
+                    <a class="nav-link ajax" id="oc" href="#">オープンキャンパス</a>
                 </li>
             </ul>
             <!-- /ナビゲーション -->
