--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                 <li class="nav-item">
                     <a class="nav-link ajax" id="oc">オープンキャンパス</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link ajax-php" id="p">れんしゅう</a>
+                </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
